Fixed overlapsing texts

--- a/style.css
+++ b/style.css
@@ -3713,7 +3713,6 @@ thead.fc-border th:last-child {
   position: absolute;
   bottom: 0;
   font-size: 12px;
-  z-index: 2;
   border: 2px solid transparent;
 }
 
@@ -3755,7 +3754,6 @@ thead.fc-border th:last-child {
   text-align: -webkit-center;
   border: 1px solid #9e9e9e;
   border-radius: 5px;
-  z-index: 2;
 }
 
 .fencing-panel-rail {
